    * a name has been given to all threads collecting data for logging purpose.
    * MSL pressure is now computed in collecting threads.
    * threads to display data have been improved.
    * replaced loop_forever in MQTT thread by loop_start and loop_stop.
    * database options are now handled by the weather stations.
    * all icons have been resized.

  * FIXED:
    * few corrections to make the weather station works on raspberry pi.
    * the size of all splitter handlers has been fixed.
    * an issue with a section of the config file has been fixed.
    * fixed an issue with data display.
    * the syncing function now works with all users.
    * sensor dict is now used properly in all threads collecting data.
    * fixed an issue preventing the deletion of a sensor in BME280 window
    * msl pressure was missing from the variable dict when no sensor is connected.
    * the address button of the mqtt managers was not connected to a function.
    * fixed few issues with MQTT thread.
    * if a table is empty for a sensor, its thread is now launched.

### March 5 2021, Release version 0.10.1 ###

  * FIXED:
    * fixed an issue with the update system.

  * ADDED:
    * logging messages have been added in the update system.


### March 5 2021, Release version 0.10.0 ###

  * ADDED:
    * OpenWeather has been added as a weather forecast provider.
    * a new version of the option window has been introduced.
    * meteofrance api and openweather api versions have been added to log.

  * MODIFIED:
    * Openweather has been integrated in all widgets.
    * stylesheet has been tweaked in option window.


### March 2 2021, Release version 0.9.3 ###

  * ADDED:
    * a function to sync graphic materials has been added (to avoid icons and stylesheet issues).

  * FIXED:
    * fixed an issue with paho mqtt disconnect callback.
    * if battery and/or signal values are None, it leads to an exception, it has been fixed.