@@ -60,7 +60,8 @@ def add_1h_forecast_widget(self, hour, weather, temp, full_dt, horizontal_layout
     self.fc_1h_nbr1 += 1
 
 
-def add_6h_forecast_widget(self, date, weather, temp, dt_list, horizontal_layout, api='meteofrance'):
+def add_6h_forecast_widget(self, date, weather, temp, dt_list, horizontal_layout, sunrise=None, sunset=None,
+                           api='meteofrance'):
     logging.debug('gui - gui_functions.py - add_6h_forecast_widget')
     self.fc_6h_fr_1.append(QtWidgets.QFrame())
     if self.fc_6h_nbr1 not in [0, 3]:
@@ -118,7 +119,8 @@ def add_6h_forecast_widget(self, date, weather, temp, dt_list, horizontal_layout
     self.fc_6h_vert_lay_1[self.fc_6h_nbr1].addWidget(self.fc_6h_lb_2[self.fc_6h_nbr1])
     horizontal_layout.addLayout(self.fc_6h_vert_lay_1[self.fc_6h_nbr1])
     if api == 'meteofrance':
-        self.fc_6h_bt_1[self.fc_6h_nbr1].clicked.connect(lambda: self.display_6h_forecast_details(dt_list))
+        self.fc_6h_bt_1[self.fc_6h_nbr1].clicked.connect(lambda: self.display_6h_forecast_details(dt_list, sunrise,
+                                                                                                  sunset))
     else:
         self.fc_6h_bt_1[self.fc_6h_nbr1].clicked.connect(lambda: self.display_1d_forecast_details(dt_list))
     self.fc_6h_nbr1 += 1
